styles.css
@font-face {
    font-family: 'Mulish';
    src: url('resources/fonts/Mulish-Regular.ttf') format("truetype");
    font-weight: normal;
}

@font-face {
    font-family: 'Mulish-SemiBold';
    src: url('resources/fonts/Mulish-SemiBold.ttf') format("truetype");
    font-weight: normal;
}

@font-face {
    font-family: 'Mulish-Bold';
    src: url('resources/fonts/Mulish-Bold.ttf') format("truetype");
    font-weight: normal;
}

.draggable {
    -webkit-app-region: drag;
}

.no-draggable {
    -webkit-app-region: no-drag;
}

html {
    -webkit-user-select: none;      
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

body {
    margin: 0;
}

.title-bar {
    height: 30px;
    background: #2b2b38;  
}

.title-bar-closeapp-button {
    color: white;
    float: right;
    height: 27px;
    padding-top: 3px;
    padding-left: 10px;
    padding-right: 10px;
    background: #2b2b38;
    transition: 0.2s;
}

.title-bar-minimize-button {
    color: white;
    float: right;
    height: 24px;
    padding-top: 6px;
    padding-left: 12px;
    padding-right: 12px;
    background: #2b2b38;
    transition: 0.2s;
}

.title-bar-close-button:hover {
    background: crimson;
    transition: 0.2s;
}

.title-bar-minus-button:hover {
    background: #3E4049;
    transition: 0.2s;
}

.main-container {
    display: flex;
    flex-direction: row;
    height: 100%;
}

/* Sidebar */
.sidebar {
    width: 255px;
    top: 0;
    left: 0;
    background: #363740;
    padding-top: 20px;
}

.sidebar h1 {
    display: block;
    padding: 10px 20px;
    color: #A4A6B3;
    text-decoration: none;
    font-family: "Mulish-Bold";
    letter-spacing: 2px;
    margin-bottom: 20px;
    font-size: 24px;
    text-transform: uppercase;
    text-align: center;
    cursor: default;
}

.sidebar a {
    display: block;
    padding: 0px 20px;
    color: #A4A6B3;
    background: #363740;
    text-decoration: none;
    font-family: "Mulish";
    font-weight: normal;
    letter-spacing: 2px;
    transition: 0.3s;
    height: 56px;
    line-height: 56px;
}

.sidebar div {
    background: #DDE2FF;
}

.sidebar div a:hover{
    color: #DDE2FF;
    margin-left: 3px;
    transition: 0.3s;
    background: #3E4049;
}

.sidebar div a img {
    width: 14px;
    margin-right: 22px;
    margin-left: 10px;
}


/* Main Content */

.content-container {
    background: #F7FAFC;
    flex-grow: 1;
    padding: 30px;
}

.content-container-padded {
    width: 100%;
    height: 100%;
    background: #F7FAFC;
}

/* Page title */

.page-title-text {
    font-family: "Mulish-Bold";
    font-size: 20px;
    color: #363740;
}

/* Biometrics */

.biometrics-content {
    display: flex;
    flex-direction: row;
    margin-top: 40px;
    justify-content: space-between;
}

.biometrics-item {
    width: 218px;
    height: 134px;
    background: white;
    border: 1px #DFE0EB solid;
    border-radius: 8px;
}

.biometrics-item-label {
    margin-top: 24px;
    text-align: center;
}

.biometrics-item-label label {
    font-size: 16px;
    font-family: "Mulish-Bold";
    color: #A4A6B3;
}

.biometrics-item-value {
    margin-top: 10px;
    text-align: center;
}

.biometrics-item-value label {
    font-size: 42px;
    font-family: "Mulish-Bold";
    color: #363740;
}

/* User input content */

.user-input-content {
    width: 962px;
    height: 546px;
    background: white;
    border: 1px #DFE0EB solid;
    border-radius: 8px;
    margin-top: 30px;
    display: flex;
    flex-direction: row;
}

.left-panel {
    width: 620px;
    border-right: 1px #DFE0EB solid;
}

.left-panel-title-div {
    width: 100%;
    margin: 30px;
    margin-bottom: 0;
}

.left-panel label {
    font-family: "Mulish-Bold";
    font-size: 24px;
    color: #363740;
}

.left-panel-image-div {
    padding-top: 20px;
    width: 100%;
    height: 410px;
}

.left-panel-image-div img {
    margin-left: auto;
    margin-right: auto;
    display: block;
    padding-right: 25px;
}

.right-panel {
    display: flex;
    flex-direction: column;
    width: 342px;
}

.right-panel-item {
    height: 109px;
}

.right-panel-border {
    border-bottom: 1px #DFE0EB solid;
}

.user-input-title {
    margin-top: 16px;
    text-align: center;
}

.user-input-title label {
    font-size: 16px;
    font-family: "Mulish-SemiBold";
    color: #A4A6B3;
}

.user-input-value {
    display: flex;
    flex-direction: row;
    margin-top: 10px;
    justify-content: center;
    align-items: center;
}

.user-input-minus {
    width: 20px;
    padding-top: 4px;
}

.user-input-plus {
    width: 20px;
    padding-top: 4px;
}

.user-input-minus img:hover{
    cursor: pointer;
}

.user-input-plus img:hover{
    cursor: pointer;
}

.user-input-display-value {
    width: 94px;
    text-align: center;
}

.user-input-display-value label {
    font-size: 32px;
    font-family: "Mulish-Bold";
    color: #363740;
}

